feat: complete project

--- a/Prediction-Model.ipynb
+++ b/Prediction-Model.ipynb
@@ -14,35 +14,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a8acd05f-b86b-4fd7-a403-7b7a82f1cf55",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\rober\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\base.py:380: InconsistentVersionWarning: Trying to unpickle estimator ExtraTreeRegressor from version 1.5.1 when using version 1.6.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\rober\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\base.py:380: InconsistentVersionWarning: Trying to unpickle estimator IsolationForest from version 1.5.1 when using version 1.6.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "model = joblib.load('iso_forest.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "6d2c9413-e17f-4cfa-91ae-30002b66a3ba",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'serial' has no attribute 'Serial'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mserial\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m ser \u001b[38;5;241m=\u001b[39m serial\u001b[38;5;241m.\u001b[39mSerial(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/dev/ttyUSB0\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m115200\u001b[39m, timeout\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'serial' has no attribute 'Serial'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files in current directory:\n",
+      "['.git', '.ipynb_checkpoints', '1', 'iso_forest.pkl', 'Notebook.ipynb', 'predict.py', 'Prediction-Model.ipynb', 'Untitled.ipynb']\n"
      ]
     }
    ],
    "source": [
-    "import serial\n",
-    "ser = serial.Serial('/dev/ttyUSB0', 115200, timeout=1)\n"
+    "import os\n",
+    "\n",
+    "print(\"Files in current directory:\")\n",
+    "print(os.listdir())\n",
+    "\n",
+    "if 'iso_forest.pkl' not in os.listdir():\n",
+    "    print(\"No iso_forest.pkl here!\")\n"
    ]
   },
   {
@@ -139,7 +154,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -153,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.11"
   }
  },
  "nbformat": 4,
